# graphic_homework

./: .gitignore  CMakeLists.txt
include/: CubeMap.h  Octree.h  RayTracer.h  Texture.h  camera.hpp  curve.hpp  group.hpp  hit.hpp  material.hpp  mesh.hpp  plane.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  triangle.hpp
mesh/: bear.mtl
src/: CubeMap.cpp  Octree.cpp  RayTracer.cpp  Texture.cpp  main.cpp  mesh.cpp  scene_parser.cpp
testcases/: toy_bear.txt
